<?xml version="1.0"?>
<package>
  <name>knowrob_semantic_maps</name>
  <version>0.0.0</version>
  <description>The knowrob_semantic_maps package</description>

  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>

  <license>BSD</license>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>python-lxml</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdfdom_py</run_depend>

  <export>
  </export>
</package>
